--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,14 +1,15 @@
 .page-header {
-    background-color: #008080;
+    background-color: #000000;
     margin-top: 0;
-    padding: 20px 20px 20px 40px;
+    padding: 10px 10px 10px 10px;
+    margin: 10px 10px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #FFFFFF;
-    font-size: 36pt;
-    text-decoration: none;
-    font-family:'Fontdiner Swanky', cursive;
+    font-size: 20pt;
+    text-decoration: underline;
+    font-family:'Merriweather', serif;
 }
 
 .content {
@@ -16,7 +17,7 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .date {
@@ -32,16 +33,18 @@ h1, h2, h3, h4 {
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
+    color: #828282;
     float: right;
-    font-size: 26pt;
+    font-size: 20pt;
     margin-right: 20px;
 }
 
 .post {
     margin-bottom: 70px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .post h1 a, .post h1 a:visited {
     color: #000000;
+    font-size: 18pt;
 }
