--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,11 +1,11 @@
 {% load static %}
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>Ssuny's blog</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <link href="<link href="https://fonts.googleapis.com/css?family=Fontdiner+Swanky|Roboto+Slab" rel="stylesheet" type="text/css">
+        <link href="<link href="https://fonts.googleapis.com/css?family=Bangers|Fontdiner+Swanky|Merienda:700|Merriweather:700|Playfair+Display:700|Noto+Sans+KR|Roboto+Slab|Roboto:500|Source+Serif+Pro:600" rel="stylesheet" type="text/css">
 
     </head>
     <body>
@@ -13,7 +13,7 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             {% endif %}
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">Ssuny</a></h1>
         </div>
         <div class="content container">
             <div class="row">
