--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -18,6 +18,7 @@
 
 .content {
     margin-left: 40px;
+    text-align: center; 
 }
 
 h1, h2, h3, h4 {
@@ -34,6 +35,7 @@ h1, h2, h3, h4 {
 
 .post-form textarea, .post-form input {
     width: 100%;
+
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
@@ -46,9 +48,17 @@ h1, h2, h3, h4 {
 .post {
     margin-bottom: 70px;
     font-family: 'Roboto', sans-serif;
+
 }
 
 .post h1 a, .post h1 a:visited {
     color: #000000;
     font-size: 18pt;
 }
+
+/*.post p {
+    border-style: solid;
+    border-width: 1px;
+    border-color: #000000;
+    padding: 10px 10px 10px 10px;
+} */
