--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,8 +11,14 @@
     <body>
         <div class="page-header">
             {% if user.is_authenticated %}
+                <!--post new button-->
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             {% endif %}
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+            {% endif %}
+
+
             <h1><a href="/">Ssuny</a></h1>
         </div>
         <div class="content container">
