--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -25,6 +25,10 @@
     text-align: center; 
 }
 
+.comment {
+    margin: 20px 0px 20px 20px;
+}
+
 h1, h2, h3, h4 {
     font-family: 'Roboto', sans-serif;
 }
