--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,8 +5,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <link href="<link href="https://fonts.googleapis.com/css?family=Bangers|Fontdiner+Swanky|Merienda:700|Merriweather:700|Playfair+Display:700|Noto+Sans+KR|Roboto+Slab|Roboto:500|Source+Serif+Pro:600" rel="stylesheet" type="text/css">
-
+        <link href="https://fonts.googleapis.com/css?family=Bangers|Fontdiner+Swanky|Merienda:700|Merriweather:700|Roboto+Slab|Roboto:500|Source+Serif+Pro:600" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div class="page-header">
